--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 
 token.pickle
 *.pyc
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+
+/__pycache__
+token.pickle
